@@ -1,3 +1,6 @@
+08/09/2010
+- allow multiple template inheritance branches starting in subtemplates
+
 07/09/2010
 - bugfix {counter} and {cycle} plugin assigned result to smarty variable not in local(template) scope
 - bugfix templates containing just {strip} {/strip} tags did produce an error
